--- a/vday.css
+++ b/vday.css
@@ -1,4 +1,47 @@
 * {
-font-family: "Georgia";
-color: red;
+font-family: Comic cursive; MS;
+line-spacing: 1em;
+
+}
+
+.header h1 {
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrno-Z0LBvQf6te0qGlJI5PN1VM_jV6F6pTiaU0G_rzuo-SAPt");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  width: 100%;
+  height: 100%;
+  position: relative;
+
+color: rgba(255, 0, 102, 0.5);
+background-color: pink;
+font-size: 72px;
+font-weight: bold;
+letter-spacing:0.35em;
+font-family: 'Covered By Your Grace', sans-serif;
+text-align: center;
+line-height: 5em;
+}
+
+.header h2 {
+  font-style: italic;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 1em;
+  }
+
+.header p {
+  line-height: 1.5em;
+  font-family: cursive;
+}
+
+.pickles {
+  border-style: dotted;
+  border-radius: 10px;
+  display: inline-block;
+  width: 50%;
+  height: 50%;
+}
+
+.body {
+
 }
